增加对EFCore的学习

--- a/C#/.NetCore.md
+++ b/C#/.NetCore.md
@@ -1,11 +1,11 @@
 [toc]
 # DotNet Core 3.1 知识点
 
-### log4net
+## log4net
 
-* Nutget下载:Microsoft.Extensions.Logging.Log4Net.AspNetCore
+* Nutget下载:`Microsoft.Extensions.Logging.Log4Net.AspNetCore`
 
-* 在项目根目录中创建log4net.config文件,添加以下xml
+* 在项目根目录中创建`log4net.config`文件,添加以下`xml`
 	```xml
 	<log4net>
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender" >
@@ -90,92 +90,265 @@
   </log4net>
 	
 	```
-* 在程序入口Program中,替换原生的logger
+
+* 在程序入口`Program`中,替换原生的`logger`
 	```C#
 	 public static IHostBuilder CreateHostBuilder(string[] args) =>
      Host.CreateDefaultBuilder(args)
      .ConfigureLogging((context, logger) =>
      {
-     logger.AddFilter("System", LogLevel.Warning);
-     logger.AddFilter("Microsoft", LogLevel.Warning);
-     logger.AddLog4Net();
+         logger.AddFilter("System", LogLevel.Warning);
+         logger.AddFilter("Microsoft", LogLevel.Warning);
+         logger.AddLog4Net();
      })
      .ConfigureWebHostDefaults(webBuilder =>
      {
      webBuilder.UseStartup<Startup>();
      });
 	```
-### MiddleWare
-### Swagger
-* 引用 Swashbuckle.AspNetCore
 
-	添加服务
+-----------------------------------------------------------------------------
+## Swagger
+* 引用 `Swashbuckle.AspNetCore`
+	* 添加服务
 	```C#
 	services.AddSwaggerGen(setupAction =>
     {
-    setupAction.SwaggerDoc("V1", new Microsoft.OpenApi.Models.OpenApiInfo()
-    {
-    Version = "Ver 1",
-    Description = "Ligy WebApi",
-    Title = "Ligy WebApi",
-    Contact = new Microsoft.OpenApi.Models.OpenApiContact()
-    {
-    Email = "Ligy.97@foxmail.com",
-    Name = "Ligy",
-    }
-    });
+        setupAction.SwaggerDoc("V1", new Microsoft.OpenApi.Models.OpenApiInfo()
+        {
+            Version = "Ver 1",
+            Description = "Ligy WebApi",
+            Title = "Ligy WebApi",
+        });
     });
 	```
-	
-
-使用
-```C#
- app.UseSwagger();
-            app.UseSwaggerUI(option =>
-            {
-                option.SwaggerEndpoint("/swagger/V1/swagger.json", "Ligy.Project.WebApi");
-            });
-```
-
-### Cors
-* 引用Microsoft.AspNetCore.Cors
-
-添加服务
-```C#
- services.AddCors(option =>
- {
- 	option.AddPolicy("AllowCors", builder =>
- 	 {
-	 builder.AllowAnyOrigin().AllowAnyMethod();
+	* 使用
+	 ```C#
+     app.UseSwagger();
+     app.UseSwaggerUI(option =>
+     {
+     option.SwaggerEndpoint("/swagger/V1/swagger.json", "Ligy.Project.WebApi");
      });
- });
-```
+	 ```
+	
+-----------------------------------------------------------------------------
+## Cors
+* 引用`Microsoft.AspNetCore.Cors`
+	* 添加服务
+	```C#
+	 services.AddCors(option =>
+	{
+        option.AddPolicy("AllowCors", builder =>
+         {
+         builder.AllowAnyOrigin().AllowAnyMethod();
+         });
+	});
+	```
 
-使用
-```C#
-app.UseRouting();
-// 跨域 必须在UseRouting之后,UseAuthorization之前
-app.UseCors("AllowCors");
-app.UseAuthorization();
-```
+	* 使用
+	```C#
+	app.UseRouting();
+    // 跨域 必须在UseRouting之后,UseAuthorization之前
+    app.UseCors("AllowCors");
+    app.UseAuthorization();
+	```
+-----------------------------------------------------------------------------
+## EFCore
 
-### EFCore
+### 初步配置实体模型/DbContext/依赖
 
-```C#
-services.AddDbContext<MyDbContext>(op =>
+- 启动程序安装`Microsoft.EntityFrameworkCore.Design`
+
+- 安装`EF.Tool`用于`Migration`
+
+- 安装`EF.SqlServer`/`Pomelo.MySql`用于使用扩展数据库
+- 使用方法
+  - 创建`MyDbContext` 继承`DbContext`
+
+  - 属性`DbSet<T>`用于跟踪当前实体对象
+
+  - 方法`OnConfiguring`用于配置`DbContext`相关
+
+  - 方法`OnModelCreating`用于实体生成时,给定约束或者数据
+
+    ```C#
+    public class MyDbContext : DbContext
+    {
+        public MyDbContext(){}
+
+        protected override void OnConfiguring(DbContextOptionsBuilder optionsBuilder)
+        {
+          optionsBuilder.UseMySql("data source=localhost;database=LigyApi; uid=root;pwd=Sa123456!;");
+        }
+
+        protected override void OnModelCreating(ModelBuilder modelBuilder)
+          {
+              base.OnModelCreating(modelBuilder);
+     	  }
+
+        public DbSet<Blog> Blogs { get; set; }
+        public DbSet<Post> Posts { get; set; }
+    }
+    ```
+
+  - e.g: 这种方式需要在`Startup`中注册`DbContext`服务,好处是配置连接字符串可以通过`appsetting.json`获取
+        ```C#
+     public MyDbContext(DbContextOptions<MyDbContext>) : base(options){ }
+         
+        ```
+        
+        ```
+
+    ```C#
+    //注册服务
+    services.AddDbContext<MyDbContext>(op =>
+    {
+            op.UseLoggerFactory(LoggerFactory.Create(builder =>
             {
-                op.UseLoggerFactory(LoggerFactory.Create(builder =>
-                {
-                    builder.AddFilter((string category, LogLevel level) =>
-                    category == DbLoggerCategory.Database.Command.Name
-                    && level == LogLevel.Information ).AddConsole();
-                })).UseMySql(Configuration.GetConnectionString("MySqlDB"));
-            });
-```
+            builder.AddFilter((string category, LogLevel level) =>
+            category == DbLoggerCategory.Database.Command.Name
+            && level == LogLevel.Information ).AddConsole();
+            })).UseMySql(Configuration.GetConnectionString("MySqlDB"));
+     });
+    ```
 
-### SignalR
+   - 最后使用依赖注入即可拿到`MyDbContext`对象实例
+
+### 深入配置
+- 将类继承`IEntityTypeConfiguration<T>`接口,实现`Configure`,并在`OnModelCreating`中按顺序调用
+	```C#
+	new BlogConfig().Configure(modelBuilder.Entity<Blog>());
+	```
+- 当配置执行顺序无关时
+	```C#
+	modelBuilder.ApplyConfigurationsFromAssembly(typeof(IEntityTypeConfiguration<T>).Assembly);
+	```
+	
+### 注解(Attribute)
+* 非空 `[Required]` 
+* 不映射 `[NotMapped]`
+* 表名称 `[Table]`
+* 列名称 `[Column(name,[Order]=int,[TypeName]=string)]`
+* 主键 `[Key]`
+* 自动参数默认值 `[DatabaseGenerated]`
+### 模型
+* 主键 
+	```C#
+    modelBuilder.Entity<Car>()
+        .HasKey(c => c.LicensePlate);
+	```
+* 主键名称
+	```C#
+	.HasName("PrimaryKey_BlogId");
+	```
+	
+* 复合主键(**不能**使用`[Key]`注解标注俩个属性)
+	```C#
+	modelBuilder.Entity<Car>()
+        .HasKey(c => new { c.State, c.LicensePlate });
+	```
+* 索引
+	```C#
+	 builder.HasIndex(x => x.BlogId);
+	```
+* 复合索引
+	```C#
+	.HasIndex(p => new { p.FirstName, p.LastName });
+	```
+* 非空
+	```C#
+	 builder.Property(x => x.Url)
+                 .IsRequired();
+	```
+* 不映射
+	```C#
+	builder.Ignore(x => x.BlogId);
+    builder.Ignore("BlogId");
+	
+	```
+	
+* 默认值
+	```C#
+	.HasDefaultValue<T>(T t)
+	.HasDefaultValueSql<T>("表达式")
+	```
+	
+* 计算列
+	```C#
+	.HasComputedColumnSql("表达式",stored);
+	```
+* 影子属性(实体中没有数据库中的字段)
+	设定
+	```C#
+	builder.Property<string>("shadowprop");
+	```
+	访问
+	```c#
+	db.Entry(blog).Property<string>("shadowprop").CurrentValue = "value";
+	db.Blogs.OrderBy(x => EF.Property<string>(x, "shadowprop"));
+	```
+	
+	
+	
+	
+* 模型创建时,实体属性类型转换,转换器命名空间`Microsoft.EntityFrameworkCore.Storage.ValueConversion`
+	```C#
+		.HasConversion(ValueConverter);
+	```
+ 也可以直接指定类型,EF会自动寻找合适的转换器
+     ```C#
+     .HasConversion<string>();
+     ```
+	
+### 数据迁移`Migration`
+- 在`Visual Studio` 中的**程序包管理器控制台**中
+	```Shell
+	add-migration firstmigration -verbose
+	```
+	生成首次迁移文件
+- 更新到实际的数据库
+	```Shell
+	update-database -verbose
+	```
+
+### 数据操作
+>`DbContext`并非线程安全
+>
+>`OnModelCreating`方法的才做优先级最高
+- 检查实体是否设置了主键
+	```C#
+	var @bool = db.Entry(new Blog()
+    {
+        Rating = 5,
+        Url = "baidu.com"
+    }).IsKeySet;
+	```
+
+- 添加一行数据,创建一个新的实体并且添加到`db`中的`Blogs``(DBSet<T>)`属性中,使用`SaveChanges()`方法对数据进行持久化保存
+	```C#
+	using (var db = new MyDbContext())
+    {
+    var blog = new Blog { Url = "http://sample.com" };
+    db.Blogs.Add(blog);
+    db.SaveChanges();
+    }
+	```
+
+- 查询数据
+	- 查询一行数据
+		>如果查询的数据实体存在于当前上下文中,那么查询的实体就会被上下文中的实体附加上,而不会执行实际的查询
+
+		```C#
+		var blogs1 = db.Blogs.Find(1);
+        blogs1.Rating = 5;
+
+		var blogs2 = db.Blogs.Single(x => x.BlogId == 1);
+		```
+
+
+-----------------------------------------------------------------------------
+## SignalR
 >实时通信技术,回落机制
 >使用三种底层技术,websocket,server sent event, long polling
 >websocket 仅支持现代浏览器,现代服务器
 >server sent event连接数问题
->
