修改autofac格式和增加efCORE的学习

--- a/C#/.NetCore.md
+++ b/C#/.NetCore.md
@@ -159,17 +159,17 @@
 
 - 启动程序安装`Microsoft.EntityFrameworkCore.Design`
 
-- 安装`EF.Tool`用于`Migration`
+- 安装`Microsoft.EntityFrameworkCore.Tool`用于`Migration`
 
-- 安装`EF.SqlServer`/`Pomelo.MySql`用于使用扩展数据库
+- 安装`Microsoft.EntityFrameworkCore.SqlServer`/`Pomelo.EntityFrameworkCore.MySql`用于使用扩展数据库
 - 使用方法
   - 创建`MyDbContext` 继承`DbContext`
 
-  - 属性`DbSet<T>`用于跟踪当前实体对象
+  - 属性`DbSet<T>`用于暴露当前实体对象,或者暴露实体中的导航属性,再或者在`OnModuleCreating`中使用`Entity<T>()`
 
-  - 方法`OnConfiguring`用于配置`DbContext`相关
+  - 重写方法`OnConfiguring`用于配置`DbContext`相关
 
-  - 方法`OnModelCreating`用于实体生成时,给定约束或者数据
+  - 重写方法`OnModelCreating`用于实体生成时,给定约束或者数据
 
     ```C#
     public class MyDbContext : DbContext
@@ -191,14 +191,12 @@
     }
     ```
 
-  - e.g: 这种方式需要在`Startup`中注册`DbContext`服务,好处是配置连接字符串可以通过`appsetting.json`获取
-        ```C#
-     public MyDbContext(DbContextOptions<MyDbContext>) : base(options){ }
+  - e.g: 以下这种方式需要在`Startup`中注册`DbContext`服务,好处是配置连接字符串可以通过`appsetting.json`获取
+    ```C#
+    public MyDbContext(DbContextOptions<MyDbContext>) : base(options){ }
          
-        ```
-        
-        ```
-
+    ```
+    
     ```C#
     //注册服务
     services.AddDbContext<MyDbContext>(op =>
@@ -209,17 +207,17 @@
             category == DbLoggerCategory.Database.Command.Name
             && level == LogLevel.Information ).AddConsole();
             })).UseMySql(Configuration.GetConnectionString("MySqlDB"));
-     });
+ });
     ```
-
+    
    - 最后使用依赖注入即可拿到`MyDbContext`对象实例
 
 ### 深入配置
-- 将类继承`IEntityTypeConfiguration<T>`接口,实现`Configure`,并在`OnModelCreating`中按顺序调用
+- 创建一个类继承`IEntityTypeConfiguration<T>`接口,实现`Configure`方法,并在`OnModelCreating`中按顺序调用
 	```C#
 	new BlogConfig().Configure(modelBuilder.Entity<Blog>());
 	```
-- 当配置执行顺序无关时
+- 当配置执行顺序无关时,使用以下寻找继承该接口的类型
 	```C#
 	modelBuilder.ApplyConfigurationsFromAssembly(typeof(IEntityTypeConfiguration<T>).Assembly);
 	```
@@ -231,12 +229,15 @@
 * 列名称 `[Column(name,[Order]=int,[TypeName]=string)]`
 * 主键 `[Key]`
 * 自动参数默认值 `[DatabaseGenerated]`
+* 设置当前类某个属性被识别为外键,使用在当前类导航类型属性上 `[ForeignKey(属性名称)]`
+* 配置主表的属性 `[InverseProperty(主表属性)]`
 ### 模型
 * 主键 
 	```C#
     modelBuilder.Entity<Car>()
         .HasKey(c => c.LicensePlate);
 	```
+	
 * 主键名称
 	```C#
 	.HasName("PrimaryKey_BlogId");
@@ -247,19 +248,23 @@
 	modelBuilder.Entity<Car>()
         .HasKey(c => new { c.State, c.LicensePlate });
 	```
+	
 * 索引
 	```C#
 	 builder.HasIndex(x => x.BlogId);
 	```
+	
 * 复合索引
 	```C#
 	.HasIndex(p => new { p.FirstName, p.LastName });
 	```
+	
 * 非空
 	```C#
 	 builder.Property(x => x.Url)
                  .IsRequired();
 	```
+	
 * 不映射
 	```C#
 	builder.Ignore(x => x.BlogId);
@@ -277,6 +282,7 @@
 	```C#
 	.HasComputedColumnSql("表达式",stored);
 	```
+	
 * 影子属性(实体中没有数据库中的字段)
 	设定
 	```C#
@@ -290,7 +296,6 @@
 	
 	
 	
-	
 * 模型创建时,实体属性类型转换,转换器命名空间`Microsoft.EntityFrameworkCore.Storage.ValueConversion`
 	```C#
 		.HasConversion(ValueConverter);
@@ -298,9 +303,176 @@
  也可以直接指定类型,EF会自动寻找合适的转换器
      ```C#
      .HasConversion<string>();
-     ```
+  
+	   ```
 	
+* 关系
+
+  - 一对多
+
+     - 主从都有导航属性
+
+    ```C#
+    modelBuilder.Entity<Post>()//从表
+                .HasOne(p => p.Blog)//对应一个主表
+                .WithMany(b => b.Posts);//并且主表有多个从表
+    ```
+
+    - 一对多,主有导航属性,从表没有
+
+    ```C#
+    modelBuilder.Entity<Blog>()//主表
+                .HasMany(b => b.Posts)//主表有多个从表
+                .WithOne();//并且从表只对应一个主表了
+    ```
+
+    - 一对多,都没有导航属性
+
+    ```C#
+    modelBuilder.Entity<Post>()//从表
+                .HasOne<Blog>()//从表有一个主表
+                .WithMany()//并且主表有多个从表
+                .HasForeignKey(p => p.BlogId);//对应的从表外键是XXX
+    
+    ```
+  - 一对一
+  	- 确保主从都只有一个导航属性,并且从表指明主表的导航字段
+  		```C#
+  		modelBuilder.Entity<Blog>()
+            .HasOne(b => b.BlogImage)
+            .WithOne(i => i.Blog)
+  		```
+  	- 如果需要指明特别的外键
+  	```C#
+  	modelBuilder.Entity<Blog>()
+            .HasOne(b => b.BlogImage)
+            .WithOne(i => i.Blog)
+            .HasForeignKey<BlogImage>(b => b.BlogForeignKey);
+  	```
+  	
+
+  
+
+  - 多对多
+
+    - 主从都需要List<导航属性>,并将建立主从类
+
+      - .net 5之前
+
+        ```C#
+        modelBuilder.Entity<PostTag>()
+                    .HasKey(t => new { t.PostId, t.TagId });
+        
+        modelBuilder.Entity<PostTag>()
+            .HasOne(pt => pt.Post)
+            .WithMany(p => p.PostTags)
+            .HasForeignKey(pt => pt.PostId);
+        
+        modelBuilder.Entity<PostTag>()
+            .HasOne(pt => pt.Tag)
+            .WithMany(t => t.PostTags)
+            .HasForeignKey(pt => pt.TagId);
+        ```
+
+      - .net 5后增加方式
+
+        ```C#
+        modelBuilder.Entity<Post>()
+                    .HasMany(p => p.Tags)
+                    .WithMany(p => p.Posts)
+                    .UsingEntity<PostTag>(
+                        j => j
+                            .HasOne(pt => pt.Tag)
+                            .WithMany(t => t.PostTags)
+                            .HasForeignKey(pt => pt.TagId),
+                        j => j
+                            .HasOne(pt => pt.Post)
+                            .WithMany(p => p.PostTags)
+                            .HasForeignKey(pt => pt.PostId),
+                        j =>
+                        {
+                            j.Property(pt => pt.PublicationDate).HasDefaultValueSql("CURRENT_TIMESTAMP");
+                            j.HasKey(t => new { t.PostId, t.TagId });
+                        });
+        ```
+
+        
+
+  - 级联删除
+
+    ```C#
+    .OnDelete(DeleteBehavior.Cascade)
+    ```
+
+    
+- 索引
+
+  - 简单使用
+
+    ```C#
+    modelBuilder.Entity<Blog>()
+            .HasIndex(b => b.Url);
+    ```
+
+  - 复合索引
+
+    ```C#
+    modelBuilder.Entity<Person>()
+            .HasIndex(p => new { p.FirstName, p.LastName });
+    ```
+
+  - 索引唯一性
+
+    ```C#
+    modelBuilder.Entity<Blog>()
+            .HasIndex(b => b.Url)
+            .IsUnique();
+    ```
+
+  - 设定索引名称
+
+    ```C#
+    modelBuilder.Entity<Blog>()
+            .HasIndex(b => b.Url)
+            .HasDatabaseName("Index_Url");
+    ```
+
+  - 筛选索引
+
+    > 不能对视图创建筛选索引
+    >
+    > 筛选的索引不支持 `LIKE` 运算符
+
+     ```C#
+    .HasFilter("[Url] IS NOT NULL");//使用表达式
+     ```
+
+- 继承
+
+  - TPH
+
+    > *每个层次结构一个表* (TPH) 模式映射继承
+    >
+    > 建立一个表,自动创建基类和子类的字段,并且有一列Discriminator保存类型
+    >
+    > 查询基类可以将所有子类查询出来
+    >
+    > 查询子类,只会有子类数据
+    >
+    > 可以指定鉴别器的列,使用hasDiscriminator(x=>x.XXX)
+
+    - 合并列
+
+      > 如果俩个同级子类都存在相同的属性名称,那么在表创建的时候就会产生单独列"A"和"表名_A"
+      >
+      > 使用.hasColumnName("XXX")指明同一个名称,这样就可以使用同一个字段
+
+  - TPC
+
+    > 每一种类型一个表
+
 ### 数据迁移`Migration`
+
 - 在`Visual Studio` 中的**程序包管理器控制台**中
 	```Shell
 	add-migration firstmigration -verbose
@@ -311,10 +483,21 @@
 	update-database -verbose
 	```
 
+- 删除上一次的迁移
+
+  ```shell
+  delete-migaraion -verbose
+  ```
+
+  
+
+  
+
 ### 数据操作
+
 >`DbContext`并非线程安全
 >
->`OnModelCreating`方法的才做优先级最高
+>`OnModelCreating`方法的优先级最高
 - 检查实体是否设置了主键
 	```C#
 	var @bool = db.Entry(new Blog()
@@ -324,7 +507,7 @@
     }).IsKeySet;
 	```
 
-- 添加一行数据,创建一个新的实体并且添加到`db`中的`Blogs``(DBSet<T>)`属性中,使用`SaveChanges()`方法对数据进行持久化保存
+- 添加一行数据,创建一个新的实体并且添加到`db`中的`Blogs(DBSet<T>)`属性中,使用`SaveChanges()`方法对数据进行持久化保存
 	```C#
 	using (var db = new MyDbContext())
     {
