增加转换器只是

--- a/C#/.NetCore.md
+++ b/C#/.NetCore.md
@@ -232,6 +232,9 @@
 * 设置当前类某个属性被识别为外键,使用在当前类导航类型属性上 `[ForeignKey(属性名称)]`
 * 配置主表的属性 `[InverseProperty(主表属性)]`
 ### 模型
+
+- 主从 Owns ,不允许从从表访问
+
 * 主键 
 	```C#
     modelBuilder.Entity<Car>()
@@ -285,6 +288,7 @@
 	
 * 影子属性(实体中没有数据库中的字段)
 	设定
+	
 	```C#
 	builder.Property<string>("shadowprop");
 	```
@@ -470,6 +474,42 @@
   - TPC
 
     > 每一种类型一个表
+    >
+    > 使用ToTable(表名称)指明
+    >
+    > 
+
+
+- 转换器
+
+  - HasConversion
+
+    ```C#
+    modelBuilder.Entity<Blog>()
+                    .Property(x => x.BlogType)
+                    .HasConversion(
+                    v => v.ToString(),
+                    v => (BlogType)Enum.Parse(typeof(BlogType), v));
+    ```
+
+  - ValueConverter
+
+    ```C#
+     var vt = new ValueConverter<BlogType, string>(
+                    v => v.ToString(),
+                    v => (BlogType)Enum.Parse(typeof(BlogType), v)
+                    );
+    ```
+
+  - 自动转换
+
+    ```C#
+     modelBuilder.Entity<Blog>()
+                    .Property(x => x.BlogType)
+                    .HasConversion<string>();
+    ```
+
+    
 
 ### 数据迁移`Migration`
 
