--- a/C#/.NetCore.md
+++ b/C#/.NetCore.md
@@ -233,8 +233,6 @@
 * 配置主表的属性 `[InverseProperty(主表属性)]`
 ### 模型
 
-- 主从 Owns ,不允许从从表访问
-
 * 主键 
 	```C#
     modelBuilder.Entity<Car>()
@@ -477,7 +475,7 @@
     >
     > 使用ToTable(表名称)指明
     >
-    > 
+    > 或者注解标记`[Table()]`
 
 
 - 转换器
@@ -488,8 +486,8 @@
     modelBuilder.Entity<Blog>()
                     .Property(x => x.BlogType)
                     .HasConversion(
-                    v => v.ToString(),
-                    v => (BlogType)Enum.Parse(typeof(BlogType), v));
+                    v => v.ToString(),//转换成string
+                    v => (BlogType)Enum.Parse(typeof(BlogType), v));//数据库加载数据转换
     ```
 
   - ValueConverter
@@ -509,7 +507,49 @@
                     .HasConversion<string>();
     ```
 
-    
+- 表拆分
+
+  > 一对一的关系中,将外键表和主表生成在同一个表中,可以合并列,用法和普通关系没有差别
+
+- 从属类型
+
+
+  - 一对一
+
+
+    - .hasOwn   withOwner
+
+  - 一对多
+
+    ```C#
+    modelBuilder.Entity<Distributor>().OwnsMany(p => p.ShippingCenters, a =>
+    {
+        a.WithOwner().HasForeignKey("OwnerId");
+        a.Property<int>("Id");
+        a.HasKey("Id");
+    });
+    ```
+
+  - 表拆分
+
+    ```C#
+    modelBuilder.Entity<Order>().OwnsOne(
+        o => o.ShippingAddress,
+        sa =>
+        {
+            sa.Property(p => p.Street).HasColumnName("ShipsToStreet");
+            sa.Property(p => p.City).HasColumnName("ShipsToCity");
+        });
+    ```
+
+- 无键实体类型
+
+  > 不会被更改跟踪,可用于默认数据----类型数据
+
+
+  - 设置`[KeyLess]` 或者 `HasNoKey()`
+
+ 
 
 ### 数据迁移`Migration`
 
