完成对ef的模型学习

--- a/C#/.NetCore.md
+++ b/C#/.NetCore.md
@@ -549,19 +549,89 @@
 
   - 设置`[KeyLess]` 或者 `HasNoKey()`
 
+  - 如果一个实体中,存在一个以上的相同实体属性的情况,那么实体属性中,不能有当前实体的`<Type>Id`,
+
+    并且需要在modelBuilder中配置相关映射关系
+
+    ```C#
+    public class Blog
+        {
+            public int BlogId { get; set; }
+    
+            public string Url { get; set; }
+    
+            public BlogType BlogType { get; set; }
+    
+            public Profile ProfileA { get; set; }
+            public Profile ProfileB { get; set; }
+    
+            public DateTime EditTime { get; set; }
+        }
+    
+    public class Profile
+        {
+            public int ProfileId { get; set; }
+            public string Name { get; set; }
+            public Blog Blog { get; set; }
+        }
+    
+     modelBuilder.Entity<Blog>()
+                    .HasOne(x => x.ProfileA)
+                    .WithOne()
+                    .HasForeignKey<Blog>("PAId");
+    
+                modelBuilder.Entity<Blog>()
+                    .HasOne(x => x.ProfileB)
+                    .WithOne()
+                    .HasForeignKey<Blog>("PBId");
+    ```
+
+    
+
  
 
 ### 数据迁移`Migration`
 
-- 在`Visual Studio` 中的**程序包管理器控制台**中
+- 在`Visual Studio` 中的**程序包管理器控制台**中,选择当前`DbContext`所在的工程
+	
+	- 添加迁移,生成首次迁移文件
+	
 	```Shell
-	add-migration firstmigration -verbose
+		add-migration firstmigration -verbose
 	```
-	生成首次迁移文件
+	- 此处添加`-OutputDir Your\Directory` 用于导出迁移文件
+	- 添加 `-Project 项目名称`指定迁移的项目
+	
 - 更新到实际的数据库
-	```Shell
-	update-database -verbose
-	```
+  ```Shell
+  update-database -verbose
+  ```
+
+   - 假设将一个字段名称修改了,要注意迁移的警告,可能需要手动添加`newName`,否则原列数据会被清除
+
+   - 使用SQL
+
+     ```C#
+     migrationBuilder.Sql(
+     @"
+         UPDATE Customer
+         SET FullName = FirstName + ' ' + LastName;
+     ");
+     ```
+
+- 获取当前所有迁移
+
+  ```Shell
+  Get-Migration
+  ```
+
+- 生成脚本
+
+  ```C#
+  Script-Migration (from) A (to) B -Idempotent(幂等)
+  ```
+
+  
 
 - 删除上一次的迁移
 
@@ -599,7 +669,7 @@
 
 - 查询数据
 	- 查询一行数据
-		>如果查询的数据实体存在于当前上下文中,那么查询的实体就会被上下文中的实体附加上,而不会执行实际的查询
+		>如果查询的数据实体存在于当前上下文中,那么查询的实体就会被上下文中的实体附加上,而不会执行实际的查询(如果标记了AsNoTrackingWithIdentityResolution(),那么上下文实体不会有相同的标识)
 
 		```C#
 		var blogs1 = db.Blogs.Find(1);
@@ -607,6 +677,21 @@
 
 		var blogs2 = db.Blogs.Single(x => x.BlogId == 1);
 		```
+		
+	- 在顶级投影中,`Select`,如果返回的类型在客户端中使用了方法处理类型的属性,返回的实体一样会被跟踪
+	
+	  - 注意内存泄漏,
+	    - 原因:
+	      - 顶级投影会被缓存的委托引用,为了再次使用
+	      - 投影方法中使用了`EF`没有映射的实例`this`之类
+	    - 解决:
+	      - 静态方法
+	      - 传入局部参数
+	
+	- 加载数据
+	
+	  - 预先加载
+	    - 
 
 
 -----------------------------------------------------------------------------
