增加原生sql查询学习

--- a/C#/.NetCore.md
+++ b/C#/.NetCore.md
@@ -509,7 +509,7 @@
 
 - 表拆分
 
-  > 一对一的关系中,将外键表和主表生成在同一个表中,可以合并列,用法和普通关系没有差别
+  > 一对一的关系中,将外键表和主表生成在同一个表`ToTable()`中,可以合并列,用法和普通关系没有差别
 
 - 从属类型
 
@@ -691,7 +691,11 @@
 	- 加载数据
 	
 	  - 预先加载
-	    - 
+	    - InClude(x=>x.)
+	    - 在InClude里面支持过滤:`Where`、`OrderBy`、`OrderByDescending`、`ThenBy`、`ThenByDescending`、`Skip` 和 `Take`。
+	    - 在InClude里面只能执行一个过滤
+	    - 可以对同一个导航属性使用过滤
+	    - 注意在当前上下文中,如果已查询某数据,但是后续再查询该数据时,当前查询结果会引用第一次的数据....导致第二次条件失败
 
 
 -----------------------------------------------------------------------------
