--- a/C#/.NetCore.md
+++ b/C#/.NetCore.md
@@ -668,16 +668,15 @@
 	```
 
 - 查询数据
-	- 查询一行数据
-		>如果查询的数据实体存在于当前上下文中,那么查询的实体就会被上下文中的实体附加上,而不会执行实际的查询(如果标记了AsNoTrackingWithIdentityResolution(),那么上下文实体不会有相同的标识)
+  - 查询一行数据
+  	>如果查询的数据实体存在于当前上下文中,那么查询的实体就会被上下文中的实体附加上,而不会执行实际的查询(如果标记了AsNoTrackingWithIdentityResolution(),那么上下文实体不会有相同的标识)
 
-		```C#
-		var blogs1 = db.Blogs.Find(1);
+  	```C#
+  	var blogs1 = db.Blogs.Find(1);
         blogs1.Rating = 5;
-
-		var blogs2 = db.Blogs.Single(x => x.BlogId == 1);
-		```
-		
+    var blogs2 = db.Blogs.Single(x => x.BlogId == 1);
+    ```
+	
 	- 在顶级投影中,`Select`,如果返回的类型在客户端中使用了方法处理类型的属性,返回的实体一样会被跟踪
 	
 	  - 注意内存泄漏,
@@ -691,12 +690,50 @@
 	- 加载数据
 	
 	  - 预先加载
-	    - InClude(x=>x.)
-	    - 在InClude里面支持过滤:`Where`、`OrderBy`、`OrderByDescending`、`ThenBy`、`ThenByDescending`、`Skip` 和 `Take`。
-	    - 在InClude里面只能执行一个过滤
-	    - 可以对同一个导航属性使用过滤
-	    - 注意在当前上下文中,如果已查询某数据,但是后续再查询该数据时,当前查询结果会引用第一次的数据....导致第二次条件失败
-
+	    - 使用`Include`或者`ThenInclude()`
+      - 在InClude里面支持过滤:`Where`、`OrderBy`、`OrderByDescending`、`ThenBy`、`ThenByDescending`、`Skip` 和 `Take`。
+      - 在InClude里面只能执行一个过滤
+      - 可以对同一个导航属性使用过滤
+    - 注意在当前上下文中,如果已查询某数据,但是后续再查询该数据时,当前查询结果会引用第一次的数据....导致第二次条件失败
+  
+  - 显示加载
+  
+    - 实体:`db.Entry(blog).Reference(b => b.ProfileA).Load();`
+  
+    - 实体集合:` db.Entry(blog).Collection(b => b.Posts).Load();`
+  
+    				使用`Query()`可以在服务器上进行评估
+  
+  - 延迟加载
+  
+      - 无代理:
+        - `LazyLoadingEnabled=true`
+        - 注入ILazyLoader,并且在属性上使用`Load`方法
+      - 代理:
+        - 引用一个代理包
+      - 需要延迟加载的属性标记`virtual`即可
+  
+  - 查分查询 `AsSplitQuery`  针对笛卡尔积
+  
+  - 单一查询 ``AsSingleQuery` `
+  
+    
+  
+  - **注意**
+  
+    > 某些序列化框架不允许使用循环引用。 例如，Json.NET 在发现循环引用的情况下，会引发异常。
+  
+    	解决:
+  
+      ```C#
+      services.AddMvc()
+              .AddJsonOptions(
+                  options => options.SerializerSettings.ReferenceLoopHandling = Newtonsoft.Json.ReferenceLoopHandling.Ignore
+              );
+      ```
+  ```
+  
+  ```
 
 -----------------------------------------------------------------------------
 ## SignalR
