准备开始数据操作学习

--- a/C#/.NetCore.md
+++ b/C#/.NetCore.md
@@ -731,9 +731,14 @@
                   options => options.SerializerSettings.ReferenceLoopHandling = Newtonsoft.Json.ReferenceLoopHandling.Ignore
               );
       ```
-  ```
+    
+  - 原生SQL
   
-  ```
+      - `FromSqlRaw` 
+          - 查询字段必须和实体一致
+          - 不能使用`$`传入参数,防止**SQL注入**,需要使用"string.format"的方法
+          - 可以使用`SqlParameter`传入参数
+      - `FromSqlInterpolated`可以防止**SQL注入**
 
 -----------------------------------------------------------------------------
 ## SignalR
